--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@capacitor/status-bar": "7.0.3",
     "@ionic/react": "^8.5.0",
     "@ionic/react-router": "^8.5.0",
+    "@ionic/storage-angular": "^4.0.0",
     "@tailwindcss/vite": "^4.1.13",
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
