--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,12 +21,15 @@
     "@tailwindcss/vite": "^4.1.13",
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
+    "chart.js": "^4.5.0",
     "ionicons": "^7.4.0",
     "react": "19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "19.0.0",
     "react-router": "^5.3.4",
     "react-router-dom": "^5.3.4",
-    "tailwindcss": "^4.1.13"
+    "tailwindcss": "^4.1.13",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@capacitor/cli": "7.4.3",
