--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,7 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@capacitor/android": "^7.4.3",
+    "@capacitor/android": "^7.4.4",
     "@capacitor/app": "7.1.0",
     "@capacitor/core": "7.4.3",
     "@capacitor/filesystem": "^7.1.4",
@@ -18,14 +18,14 @@
     "@capacitor/keyboard": "7.0.3",
     "@capacitor/share": "^7.0.2",
     "@capacitor/status-bar": "7.0.3",
-    "@ionic/react": "^8.5.0",
-    "@ionic/react-router": "^8.5.0",
+    "@ionic/react": "^8.7.7",
+    "@ionic/react-router": "^8.7.7",
     "@ionic/storage": "^4.0.0",
     "@ionic/storage-angular": "^4.0.0",
-    "@tailwindcss/vite": "^4.1.13",
+    "@tailwindcss/vite": "^4.1.16",
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
-    "chart.js": "^4.5.0",
+    "chart.js": "^4.5.1",
     "chartjs-adapter-date-fns": "^3.0.0",
     "ionicons": "^7.4.0",
     "react": "19.0.0",
@@ -33,29 +33,29 @@
     "react-dom": "19.0.0",
     "react-router": "^5.3.4",
     "react-router-dom": "^5.3.4",
-    "tailwindcss": "^4.1.13",
+    "tailwindcss": "^4.1.16",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@capacitor/cli": "7.4.3",
-    "@testing-library/dom": ">=7.21.4",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^16.2.0",
-    "@testing-library/user-event": "^14.4.3",
+    "@testing-library/dom": "^10.4.1",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/react": "19.0.10",
     "@types/react-dom": "19.0.4",
-    "@vitejs/plugin-legacy": "^5.0.0",
-    "@vitejs/plugin-react": "^4.0.1",
-    "eslint": "^9.20.1",
-    "eslint-plugin-react": "^7.32.2",
-    "eslint-plugin-react-hooks": "^5.1.0",
-    "eslint-plugin-react-refresh": "^0.4.19",
+    "@vitejs/plugin-legacy": "^5.4.3",
+    "@vitejs/plugin-react": "^4.7.0",
+    "eslint": "^9.38.0",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^15.15.0",
     "jsdom": "^22.1.0",
-    "terser": "^5.4.0",
-    "typescript": "^5.1.6",
-    "typescript-eslint": "^8.24.0",
-    "vite": "~5.2.0",
+    "terser": "^5.44.0",
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.46.2",
+    "vite": "~5.2.14",
     "vitest": "^0.34.6"
   },
   "overrides": {
