--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,6 +37,7 @@
     "zustand": "^5.0.8"
   },
   "devDependencies": {
+    "@capacitor/assets": "^3.0.5",
     "@capacitor/cli": "7.4.3",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^5.17.0",
