--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,9 +13,10 @@
     "@capacitor/android": "^7.4.4",
     "@capacitor/app": "7.1.0",
     "@capacitor/core": "7.4.3",
+    "@capacitor/device": "^7.0.2",
     "@capacitor/filesystem": "^7.1.4",
     "@capacitor/haptics": "7.0.2",
-    "@capacitor/keyboard": "7.0.3",
+    "@capacitor/keyboard": "^7.0.3",
     "@capacitor/share": "^7.0.2",
     "@capacitor/status-bar": "7.0.3",
     "@ionic/react": "^8.7.7",
